
      \item \code{zapsmall()} gets new optional arguments, function
      \code{mFUN} and \code{min.d}, for extra flexibility; fulfills a
      wish in \PR{18199}.  Also, it is now an implicit S4 generic in
      package \pkg{methods}.

      \item The Rd filter for \code{aspell()} gains an \code{ignore}
      argument.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item The parser has been updated to work with \I{bison} 3.8.2, 
      which is now used for the pre-generated parsers in \file{gram.c},
      \code{file.c}, and \file{gramRd.c}. A few parser error messages 
      have changed, which may affect code that relies on exact messages.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item System \I{valgrind} headers are now required to use
      \command{configure} option \option{--with-valgrind-instrumentation}
      with value \code{1} or \code{2}.

      \item \command{configure} will warn if it encounters a 32-bit
      build, as that is nowadays almost untested.

      \item Environment variable \env{R_SYSTEM_ABI} is no longer used and
      so no longer recorded in \file{etc/Renviron} (it was not on Windows
      and was only ever used when preparing package \pkg{tools}).

      \item If the \code{libdeflate} library and headers are available,
      \code{libdeflate} rather than \code{libz} is used to (de)compress
      \R objects in lazy-load databases,  Typically tasks spend up to 5\% of
      their time on such operations, although creating lazy-data
      databases is one of the exceptions.

      This can be suppressed if the library is available by the
      \command{configure} option
      \option{--without-libdeflate-compression}.

      \item \command{configure} option \option{--enable-lto=check} has
      not worked reliably since 2019 and has been removed.

      \item The minimum \command{autoconf} requirement for a maintainer
      build has been increased to \command{autoconf}\sspace{}2.71.
